force-app/main/default/objects/PBS_RSAP_Step_Rent__c/PBS_RSAP_Step_Rent__c.object-meta.xml
<CustomObject>
    <label>Step Rent</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Step Rent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Rents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>