force-app/main/default/objects/PBS_RSAP_Step_Rent__c/fields/PBS_AAAP_Offer__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Offer__c</fullName>
    <label>Offer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only add Step Rents to RSAP Offers.</errorMessage>
        <filterItems>
            <field>PBS_AAAP_Offer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>RSAP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Step Rents</relationshipLabel>
    <relationshipName>Step_Rents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>