force-app/main/default/objects/PBS_RSAP_Step_Rent__c/fields/PBS_RSAP_Rent_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Rent_Number__c</fullName>
    <label>Rent Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>