force-app/main/default/objects/PBS_RSAP_Step_Rent__c/fields/PBS_RSAP_Step_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Step_Annual_Rent__c</fullName>
    <label>Step Annual Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>