force-app/main/default/objects/PBS_RSAP_Step_Rent__c/fields/PBS_RSAP_Step_Payment_Basis__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Step_Payment_Basis__c</fullName>
    <formula>IF(ISPICKVAL( PBS_RSAP_Step_Rent_Type__c , &apos;&apos;),&apos;&apos;,IF( ISPICKVAL( PBS_RSAP_Step_Rent_Type__c , &apos;Shell&apos;) , &apos;Year&apos;, &apos;Space per Month&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Payment Basis</label>
    <type>Text</type>
</CustomField>