force-app/main/default/objects/PBS_RSAP_Step_Rent__c/fields/PBS_RSAP_Step_Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Step_Rent_Type__c</fullName>
    <label>Step Rent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>Parking/General/Surface</fullName>
            </value>
            <value>
                <fullName>Parking/General/Structured</fullName>
            </value>
            <value>
                <fullName>Parking/Reserved/Surface</fullName>
            </value>
            <value>
                <fullName>Parking/Reserved/Structured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>